account / cards / shipping pages

--- a/health-profile.html
+++ b/health-profile.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/fonts.css">
+<link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/bootstrap-select.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/j-style.css">
@@ -15,51 +16,52 @@
     <!--[if lt IE 10]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-    <header my-header="">
-        <div class="top">
-            <div class="container">
-                <div class="call-block">
-                    Call Toll Free <a href="callto:+18664562456"><img src="img/call-icn.png" width="17" height="17" alt="">1-866-456-2456</a>
-                </div>
-                <div class="free-shipping">
-                    <b>free shipping</b> on all orders over $100
-                </div>
-                <div class="user-btns">
-                    <a href="#"><img src="img/login-icn.png" alt="">Sign in</a>
-                    <a href="#"><img src="img/reg-icn.png" alt="">Register</a>
-                </div>
-                <div class="mobile-top-nav">
-                    <a href="#" class="login-btn"></a>
-                    <a href="#" class="cart-btn"></a>
-                    <a href="#" class="nav-btn"></a>
-                </div>
-            </div>
-        </div>
-        <ul class="login-nav">
-            <li><a href="#">Sign In</a></li>
-            <li><a href="#">Register</a></li>
-        </ul>
+</head>
+<header my-header="">
+    <div class="top">
         <div class="container">
-            <a href="#/" class="logo"><img class="img-responsive" src="img/logo.png" alt=""></a>
-            <form method="get" action="" class="header-search ng-pristine ng-valid">
-                <input type="search" name="q" ng-model="search" placeholder="Find Your Medications (eg. Plavix, Viagra, Lipitor, etc.)" class="ng-pristine ng-untouched ng-valid" aria-invalid="false">
-                <button type="submit"></button>
-            </form>
-            <a href="#" class="header-cart ng-scope ng-binding" ng-controller="headerCartCtrl">
-                <span>shopping cart</span>
-                533 items- <b class="ng-binding">$1139 USD</b>
-            </a>
-        </div>
-        <nav class="header-nav">
-            <div class="container">
-                <a href="#/" class="active">Home</a>
-                <a href="/#orderonline">Place a new order</a>
-                <a href="#">Refill order</a>
-                <a href="#">How to order</a>
-                <a href="#">FAQ</a>
-                <a href="#">Contact us</a>
+            <div class="call-block">
+                Call Toll Free <a href="callto:+18664562456"><img src="img/call-icn.png" width="17" height="17" alt="">1-866-456-2456</a>
             </div>
-        </nav>
+            <div class="free-shipping">
+                <b>free shipping</b> on all orders over $100
+            </div>
+            <div class="user-btns">
+                <a href="#"><img src="img/login-icn.png" alt="">Sign in</a>
+                <a href="#"><img src="img/reg-icn.png" alt="">Register</a>
+            </div>
+            <div class="mobile-top-nav">
+                <a href="#" class="login-btn"></a>
+                <a href="#" class="cart-btn"></a>
+                <a href="#" class="nav-btn"></a>
+            </div>
+        </div>
+    </div>
+    <ul class="login-nav">
+        <li><a href="#">Sign In</a></li>
+        <li><a href="#">Register</a></li>
+    </ul>
+    <div class="container">
+        <a href="#/" class="logo"><img class="img-responsive" src="img/logo.png" alt=""></a>
+        <form method="get" action="" class="header-search ng-pristine ng-valid">
+            <input type="search" name="q" ng-model="search" placeholder="Find Your Medications (eg. Plavix, Viagra, Lipitor, etc.)" class="ng-pristine ng-untouched ng-valid" aria-invalid="false">
+            <button type="submit"></button>
+        </form>
+        <a href="#" class="header-cart ng-scope ng-binding" ng-controller="headerCartCtrl">
+            <span>shopping cart</span>
+            533 items- <b class="ng-binding">$1139 USD</b>
+        </a>
+    </div>
+    <nav class="header-nav">
+        <div class="container">
+            <a href="#/" class="active">Home</a>
+            <a href="/#orderonline">Place a new order</a>
+            <a href="#">Refill order</a>
+            <a href="#">How to order</a>
+            <a href="#">FAQ</a>
+            <a href="#">Contact us</a>
+        </div>
+    </nav>
 </header>
 <main class="ng-scope">
     <div class="container health-profile-page ng-scope">
