--- a/account.html
+++ b/account.html
@@ -89,14 +89,37 @@
                         </a>
                     </li>
                     <li>
-                        <a href="shipping.html">
-                            Shipping Address
+                        <a href="upload.html">
+                            Upload Prescriptions
                         </a>
                     </li>
                     <li>
-                        <a href="health-profile.html">
-                            Health Profile
+                        <a href="upload-checks.html">
+                            Upload Checks
                         </a>
+                    </li>
+                    <li>
+                        <a href="" class="subLink">
+                            My information
+                            <i class="fa fa-caret-down right"></i>
+                        </a>
+                        <ul class="subUl">
+                            <li>
+                                <a href="personal-info.html">
+                                    My Personal Information
+                                </a>
+                            </li>
+                            <li>
+                                <a href="shipping.html">
+                                    Shipping Address
+                                </a>
+                            </li>
+                            <li>
+                                <a href="health-profile.html">
+                                    Health Profile
+                                </a>
+                            </li>
+                        </ul>
                     </li>
                     <li>
                         <a href="credit-cards.html">
@@ -120,23 +143,194 @@
                     <p>This number will not change.</p>
                 </div>
                 <hr class="customHR"/>
-                <div class="row">
-                    <div class="col-md-6 simpleProfileInfo">
-                        <div class="infoTitle">Personal Information</div>
-                        <p>Sheila Crossman</p>
-                        <p>SHEILAC@UDSRX.COM</p>
-                        <div class="editLinks">
-                            <a href="">Change Password</a>
+                <div class="profileTitle left fullWidth">
+                    Your medications are due for a refill. Please place your refill order now so you do not risk running out of medicine.
+                </div>
+                <div class="profileSubTitle left fullWidth">
+                    Select the medications you want to re-order:
+                </div>
+                <div class="refillItems smallRefill">
+                    <div class="itemRefill active">
+                        <div class="remainingText">17 days of medicine remaining</div>
+                        <div class="tableDiv">
+                            <div class="tableCell col-md-1">
+                                <div class="customCheckbox">
+                                    <input type="checkbox" id="11" checked="">
+                                    <label for="11"></label>
+                                </div>
+                            </div>
+                            <div class="tableCell col-md-4 textLeft">
+                                <div class="nameOrder">
+                                    Plavix 75mg
+                                </div>
+                                <div class="textOrder">
+                                    <p>Manufactured by Sanofi.</p>
+                                    <p>roduct of United Kingdom</p>
+                                    <p>Shipped from United Kingdom</p>
+                                </div>
+                                <div class="requiredOrder">
+                                    <img src="img/req-ico.png">Prescription Required
+                                </div>
+                            </div>
+                            <div class="tableCell col-md-5 textLeft">
+                                <div class="form-group">
+                                    <select class="form-control">
+                                        <option>28 tablets - $79.00 USD ($2.82 USD/tab)</option>
+                                        <option>Dinner</option>
+                                        <option>Evening</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="tableCell col-md-2">
+                                <span>$79.00 USD</span>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-md-6 simpleProfileInfo">
-                        <div class="infoTitle">Billing Information</div>
-                        <p>Sheila Crossman</p>
-                        <p>1245 West St.Michigan 98787-1234 United States</p>
-                        <p>9999999999</p>
-                        <div class="editLinks">
-                            <a href="">Edit</a>
-                            <a href="">Add a new Shipping Address</a>
+                    <div class="itemRefill">
+                        <div class="remainingText">17 days of medicine remaining</div>
+                        <div class="tableDiv">
+                            <div class="tableCell col-md-1">
+                                <div class="customCheckbox">
+                                    <input type="checkbox" id="12">
+                                    <label for="12"></label>
+                                </div>
+                            </div>
+                            <div class="tableCell col-md-4 textLeft">
+                                <div class="nameOrder">
+                                    Plavix 75mg
+                                </div>
+                                <div class="textOrder">
+                                    <p>Manufactured by Sanofi.</p>
+                                    <p>roduct of United Kingdom</p>
+                                    <p>Shipped from United Kingdom</p>
+                                </div>
+                                <div class="requiredOrder">
+                                    <img src="img/req-ico.png">Prescription Required
+                                </div>
+                            </div>
+                            <div class="tableCell col-md-5 textLeft">
+                                <div class="form-group">
+                                    <select class="form-control">
+                                        <option>28 tablets - $79.00 USD ($2.82 USD/tab)</option>
+                                        <option>Dinner</option>
+                                        <option>Evening</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="tableCell col-md-2">
+                                <span>$79.00 USD</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-12">
+                    <div class="totalInfo right">
+                        <div class="row">
+                            <span class="col-md-6">Subtotal:</span>
+                            <span class="col-md-6">$278.00 USD</span>
+                        </div>
+                        <div class="row">
+                            <span class="col-md-6">Shipping::</span>
+                            <span class="col-md-6">Free</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-12 greyTotal">
+                    <div class="totalInfo right">
+                        <div class="row">
+                            <span class="col-md-6">Total:</span>
+                            <span class="col-md-6">$278.00 USD</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-12">
+                    <div class="row">
+                        <button type="button" class="btn btn-danger right refillBtn">Place Refill Order</button>
+                    </div>
+                </div>
+                <hr class="customHR"/>
+                <div class="ordersAccordion orderTable left fullWidth" data-content="accordion">
+                    <div class="accItem left fullWidth">
+                        <div class="accTitle left fullWidth">
+                            <div class="tableDiv">
+                                <div class="tableCell">
+                                    <strong>890786</strong>
+                                </div>
+                                <div class="tableCell">
+                                    04/02/16
+                                </div>
+                                <div class="tableCell">
+                                    $278.00 USD
+                                </div>
+                                <div class="tableCell">
+                                    <a href="">Print</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accBlock left fullWidth">
+                            <div class="line">
+                                <span class="orderSubTitle">Plavix 75mg 84 tablets</span>
+                            </div>
+                            <div class="line">
+                                <span>status:</span>Waiting prescription
+                                <button type="button" class="btn btn-success">Upload Prescription</button>
+                            </div>
+                            <div class="line">
+                                <span>shipping date:</span>Waiting to be shipped
+                            </div>
+                            <div class="line">
+                                <span>tracking number:</span>1256683549
+                            </div>
+                            <div class="line">
+                                <span>Estimated Delivery Date:</span>05/22/2016
+                            </div>
+                            <div class="line noBorder">
+                                <p>* Anticipated delivery date is not guaranteed. It is an estimation. There may be unforeseeable delays such as Customs, etc. which are out of our control. Average shipping time is 7-10 business days.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="profileTitle left fullWidth">
+                    You need to send us a prescription and make a payment according to your order.
+                </div>
+                <div class="prescriptionBLock">
+                    <div class="tableDiv">
+                        <div class="tableCell">
+                            <img src="img/presription.png" alt="" title="">
+                        </div>
+                        <div class="tableCell text-left">
+                            We will need a copy of the prescription in order to ship
+                            your order.
+                        </div>
+                        <div class="tableCell text-left">
+                            <button type="button" class="btn btn-success">send prescription</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="prescriptionBLock">
+                    <div class="tableDiv">
+                        <div class="tableCell">
+                            <img src="img/card-ico-sample.png" alt="" title="">
+                        </div>
+                        <div class="tableCell text-left">
+                            <div class="title">
+                                Pay By Check
+                            </div>
+                            <div class="text">
+                                Simply upload a photo of your check. No Mailing Required!
+                            </div>
+                        </div>
+                        <div class="tableCell text-left">
+
+                        </div>
+                    </div>
+                    <div class="fileUploader">
+                        <div class="tableDiv">
+                            <div class="tableCell">
+                                <img src="img/upload-ico.png" alt="" title="">
+                                <span>Drag and Drop files here or</span>
+                                <button type="button" class="btn btnGreen">Browse</button>
+                            </div>
                         </div>
                     </div>
                 </div>
