--- a/autorization.html
+++ b/autorization.html
@@ -250,7 +250,49 @@
         </div>
     </div>
 </footer>
+<div class="modal loginModal fade in" tabindex="-1" role="dialog" style="display:block;">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">sign in to your account</h4>
+            </div>
+            <div class="modal-body">
+                <div class="col-md-12">
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Email">
+                    </div>
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Password">
+                    </div>
+                    <div class="form-group">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="customCheckbox checkBoxWithLabel">
+                                    <input type="checkbox" id="11">
+                                    <label for="11">Remember me</label>
+                                </div>
+                            </div>
+                            <div class="col-md-6 textRight">
+                                <a href="" class="modalLink">Forgot password?</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <div class="col-md-12 textCenter">
+                    <button type="button" class="btn btn-danger">Sign in</button>
+                </div>
+                <div class="col-md-12 textCenter">
+                    <a href="" class="modalLink">Create New Account</a>
+                </div>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+<div class="modal-backdrop fade in"></div>
 <script src="js/jquery-1.11.1.js"></script>
+<script src="js/bootstrap.min.js"></script>
 <script src="js/bootstrap-select.min.js"></script>
 <script src="js/main.js"></script>
 </body>
