--- a/contact.html
+++ b/contact.html
@@ -68,115 +68,239 @@
     <div class="container health-profile-page ng-scope">
         <div class="col-md-12">
             <h2 class="customH2">Contact us</h2>
-            <div class="row">
-                <div class="col-md-8">
-                    <div class="contactFormTitle">
-                        <div class="tableDiv">
-                            <div class="tableCell">
-                                <img src="img/fly-ico.png" alt="" title="">
-                            </div>
-                            <div class="tableCell textLeft">
-                                Please feel free to use the Feedback Form below to contact a Customer Care Representative. We'll respond to your inquiry within 1 business day.
-                            </div>
+                <div class="col-md-7 co-lg-8">
+                <div class="contactFormTitle">
+                    <div class="tableDiv">
+                        <div class="tableCell">
+                            <img src="img/fly-ico.png" alt="" title="">
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-10 contactForm">
-                            <form>
-                                <div class="row">
-                                    <div class="tableDiv">
-                                        <div class="tableCell text-left col-md-5">
-                                            <div class="form-group shippingLabel requiredLabel">
-                                                <label>First Name</label>
-                                            </div>
-                                        </div>
-                                        <div class="tableCell text-left col-md-7">
-                                            <div class="form-group">
-                                                <input type="text" class="form-control" placeholder="">
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="tableDiv">
-                                        <div class="tableCell text-left col-md-5">
-                                            <div class="form-group shippingLabel requiredLabel">
-                                                <label>Last Name</label>
-                                            </div>
-                                        </div>
-                                        <div class="tableCell text-left col-md-7">
-                                            <div class="form-group">
-                                                <input type="text" class="form-control" placeholder="">
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="tableDiv">
-                                        <div class="tableCell text-left col-md-5">
-                                            <div class="form-group shippingLabel requiredLabel">
-                                                <label>Email</label>
-                                            </div>
-                                        </div>
-                                        <div class="tableCell text-left col-md-7">
-                                            <div class="form-group">
-                                                <input type="text" class="form-control" placeholder="">
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="tableDiv">
-                                        <div class="tableCell text-left col-md-5">
-                                            <div class="form-group shippingLabel">
-                                                <label>Phone Number</label>
-                                            </div>
-                                        </div>
-                                        <div class="tableCell text-left col-md-7">
-                                            <div class="form-group">
-                                                <input type="text" class="form-control" placeholder="">
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="tableDiv">
-                                        <div class="tableCell text-left col-md-5">
-                                            <div class="form-group shippingLabel">
-                                                <label>Question Category</label>
-                                            </div>
-                                        </div>
-                                        <div class="tableCell text-left col-md-7">
-                                            <div class="form-group">
-                                                <select class="form-control">
-                                                    <option>Choose One</option>
-                                                    <option>Region</option>
-                                                    <option>Region</option>
-                                                </select>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="tableDiv">
-                                        <div class="tableCell text-left col-md-5">
-                                            <div class="form-group shippingLabel">
-                                                <label>Phone Number</label>
-                                            </div>
-                                        </div>
-                                        <div class="tableCell text-left col-md-7">
-                                            <div class="form-group">
-                                                <input type="text" class="form-control" placeholder="">
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </form>
+                        <div class="tableCell textLeft">
+                            Please feel free to use the Feedback Form below to contact a Customer Care Representative. We'll respond to your inquiry within 1 business day.
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-10 contactForm">
+                    <form>
+                        <div class="row">
+                            <div class="tableDiv">
+                                <div class="tableCell text-left col-md-5">
+                                    <div class="form-group shippingLabel requiredLabel">
+                                        <label>First Name</label>
+                                    </div>
+                                </div>
+                                <div class="tableCell text-left col-md-7">
+                                    <div class="form-group">
+                                        <input type="text" class="form-control" placeholder="">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="tableDiv">
+                                <div class="tableCell text-left col-md-5">
+                                    <div class="form-group shippingLabel requiredLabel">
+                                        <label>Last Name</label>
+                                    </div>
+                                </div>
+                                <div class="tableCell text-left col-md-7">
+                                    <div class="form-group">
+                                        <input type="text" class="form-control" placeholder="">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="tableDiv">
+                                <div class="tableCell text-left col-md-5">
+                                    <div class="form-group shippingLabel requiredLabel">
+                                        <label>Email</label>
+                                    </div>
+                                </div>
+                                <div class="tableCell text-left col-md-7">
+                                    <div class="form-group">
+                                        <input type="text" class="form-control" placeholder="">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="tableDiv">
+                                <div class="tableCell text-left col-md-5">
+                                    <div class="form-group shippingLabel">
+                                        <label>Phone Number</label>
+                                    </div>
+                                </div>
+                                <div class="tableCell text-left col-md-7">
+                                    <div class="form-group">
+                                        <input type="text" class="form-control" placeholder="">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="tableDiv">
+                                <div class="tableCell text-left col-md-5">
+                                    <div class="form-group shippingLabel">
+                                        <label>Question Category</label>
+                                    </div>
+                                </div>
+                                <div class="tableCell text-left col-md-7">
+                                    <div class="form-group">
+                                        <select class="form-control">
+                                            <option>Choose One</option>
+                                            <option>Region</option>
+                                            <option>Region</option>
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="tableDiv">
+                                <div class="tableCell text-left col-md-5">
+                                    <div class="form-group shippingLabel">
+                                        <label>Phone Number</label>
+                                    </div>
+                                </div>
+                                <div class="tableCell text-left col-md-7">
+                                    <div class="form-group">
+                                        <input type="text" class="form-control" placeholder="">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="tableDiv">
+                                <div class="tableCell text-left col-md-5">
 
+                                </div>
+                                <div class="tableCell text-left col-md-7">
+                                    <div class="form-group">
+                                        <div class="customCheckbox checkBoxWithLabel noMarginLabel">
+                                            <input type="checkbox" id="11">
+                                            <label for="11">Remember me</label>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="tableDiv">
+                                <div class="tableCell text-left col-md-5">
+
+                                </div>
+                                <div class="tableCell text-left col-md-7">
+                                    <div class="form-group">
+                                        <button type="button" class="btn btn-success">Submit</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <div class="col-md-5 col-lg-4">
+                <div class="contactBlock left fullWidth">
+                    <div class="col-md-12">
+                        <div class="contactItem left fullWidth">
+                            <div class="contactIco left fullWidth">
+                                <img src="img/phone-image.png" alt="" title="">
+                            </div>
+                            <div class="contactTitle left fullWidth">
+                                Call us
+                            </div>
+                            <div class="contactText left fullWidth">
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <span>Toll-Free Phone:</span>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <span>1-866-456-2456</span>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <span>Toll-Free Fax:</span>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <span>1-866-783-4223</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="contactText left fullWidth">
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <strong>Call Center Hours</strong>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        Monday to Friday: 7:00am to 12:00 midnight CST
+                                        Saturday: 8:00am to 6:00pm CST
+                                        Sunday: 9:30am to 6:00pm CST
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="contactText left fullWidth">
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        International Calls:
+                                    </div>
+                                    <div class="col-md-6">
+                                        <strong>001-204-255-9911</strong>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        International Fax:
+                                    </div>
+                                    <div class="col-md-6">
+                                        <strong>001-204-256-3802</strong>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <p></p>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <a href="">Find your calling code</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="contactItem left fullWidth">
+                            <div class="contactIco left fullWidth">
+                                <img src="img/mail-image.png" alt="" title="">
+                            </div>
+                            <div class="contactTitle left fullWidth">
+                                email us
+                            </div>
+                            <div class="contactText emailText left fullWidth">
+                                Please email: <strong><a href="">info@universaldrugstore.com</a></strong>
+                            </div>
+                        </div>
+                        <div class="contactItem noBorder left fullWidth">
+                            <div class="contactIco left fullWidth">
+                                <img src="img/location-image.png" alt="" title="">
+                            </div>
+                            <div class="contactTitle left fullWidth">
+                                Mailing Address
+                            </div>
+                            <div class="contactText emailText left fullWidth">
+                                <div>(Through our main mailing hub)</div>
+                                <strong>
+                                    Universal Drugstore<br>
+                                    4936 Yonge St - Suite 835<br>
+                                    Toronto, Ontario<br>
+                                    M2N 6S3 Canada
+                                </strong>
+                                <div>
+                                    <i> *Returns not accepted at this address.</i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
