--- a/contact.html
+++ b/contact.html
@@ -178,7 +178,7 @@
                                     <div class="form-group">
                                         <div class="customCheckbox checkBoxWithLabel noMarginLabel">
                                             <input type="checkbox" id="11">
-                                            <label for="11">Remember me</label>
+                                            <label for="11">I'm not a robot</label>
                                         </div>
                                     </div>
                                 </div>
