--- a/contact.html
+++ b/contact.html
@@ -158,13 +158,13 @@
                         <div class="row">
                             <div class="tableDiv">
                                 <div class="tableCell text-left col-md-5">
-                                    <div class="form-group shippingLabel">
-                                        <label>Phone Number</label>
+                                    <div class="form-group shippingLabel requiredLabel">
+                                        <label>Your Message</label>
                                     </div>
                                 </div>
                                 <div class="tableCell text-left col-md-7">
                                     <div class="form-group">
-                                        <input type="text" class="form-control" placeholder="">
+                                        <textarea class="form-control" placeholder=""></textarea>
                                     </div>
                                 </div>
                             </div>
