--- a/pay.html
+++ b/pay.html
@@ -67,7 +67,87 @@
 <main class="ng-scope">
     <div class="container health-profile-page ng-scope">
         <div class="col-md-12">
+            <img src="img/pay-ico.png" alt="" title="" class="payIco">
+            <div class="payTitle left fullWidth textCenter">Pay by Check</div>
+            <div class="paySubTitle left fullWidth textCenter">Simply upload a photo of your check to pay for your order. No Mailing Required!</div>
+            <div class="row">
+                <div class="col-md-3"></div>
+                <div class="col-md-6 textCenter">
+                    <div class="fileUploader">
+                        <div class="tableDiv">
+                            <div class="tableCell">
+                                <img src="img/upload-ico.png" alt="" title="">
+                                <span>Drag and Drop files here or</span>
+                                <button type="button" class="btn btnGreen">Browse</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="left fullWidth files textLeft">
+                        <div class="itemFile left fullWidth">
+                            <i class="fa fa-check"></i><strong>Prescription.jpg</strong>
+                        </div>
+                        <div class="itemFile left fullWidth">
+                            <i class="fa fa-close"></i><strong>Prescription.jpg</strong>
+                        </div>
+                        <div class="itemFile left fullWidth">
+                            <i class="fa fa-check"></i><strong>Prescription.jpg</strong>
+                        </div>
+                    </div>
+                    <hr class="customHR">
+                    <button type="button" class="btn btn-success">Upload Check</button>
+                    <div class="left fullWidth payTableTitle">
+                        Order Information
+                    </div>
+                    <div class="left fullWidth payTable">
+                        <div class="tableDiv">
+                            <div class="tableRow">
+                                <div class="tableCell textLeft">
+                                    <strong>Plavix (Clopidogrel) - 75mg 56 tablets</strong>
+                                    Manufactured by Sanofi.
+                                    Product of United Kingdom
+                                    Shipped from United Kingdom
+                                </div>
+                                <div class="tableCell textLeft">
 
+                                </div>
+                                <div class="tableCell textLeft">
+                                    <strong>$136.00 USD</strong>
+                                </div>
+                            </div>
+                            <div class="tableRow">
+                                <div class="tableCell textLeft">
+                                    <strong>Plavix (Clopidogrel) - 75mg 56 tablets</strong>
+                                    Manufactured by Sanofi.
+                                    Product of United Kingdom
+                                    Shipped from United Kingdom
+                                </div>
+                                <div class="tableCell textLeft">
+
+                                </div>
+                                <div class="tableCell textLeft">
+                                    <strong>$136.00 USD</strong>
+                                </div>
+                            </div>
+                            <div class="tableRow">
+                                <div class="tableCell textLeft">
+
+                                </div>
+                                <div class="tableCell textLeft">
+                                    <strong>Subtotal:</strong>
+                                    <strong>Shipping:</strong>
+                                    <strong>Total:</strong>
+                                </div>
+                                <div class="tableCell textLeft">
+                                    <strong>$136.00 USD</strong>
+                                    <strong><span>Free</span></strong>
+                                    <strong>$136.00 USD</strong>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3"></div>
+            </div>
         </div>
     </div>
 </main>
